DevOCL/src/objects/CLQ_Message__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Corresponding_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link the message to the corresponding Case record.</description>
        <inlineHelpText>Link the message to the corresponding Case record.</inlineHelpText>
        <label>Corresponding Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>CaseMessage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Corresponding_Program_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link the message to the corresponding program transaction</description>
        <inlineHelpText>Link the message to the corresponding program transaction</inlineHelpText>
        <label>Corresponding Program Transaction</label>
        <referenceTo>CLQ_Program_Transaction__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>ProgramMessage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Message object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Message_Detail__c</fullName>
        <description>Body of the corresponding email.</description>
        <inlineHelpText>Body of the corresponding email.</inlineHelpText>
        <label>Message Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CLQ_Program__c</fullName>
        <description>Link the message to the corresponding Program.</description>
        <inlineHelpText>Link the message to the corresponding Program.</inlineHelpText>
        <label>Program</label>
        <referenceTo>CLQ_Program__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CLQ_Subject__c</fullName>
        <description>Subject of the Email</description>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Transaction</label>
        <referenceTo>CLQ_Program_Transaction__c</referenceTo>
        <relationshipLabel>Messages (Program Transaction)</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Message</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>